--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@ body {
     justify-content: center;
     position: absolute;
     top: 0;
-    background-color: #091B29;
     width: 100%;
     min-height: 100vh;
+    background-color: #040A11;
     margin: 0;
     z-index: 2;
 }
@@ -106,8 +106,8 @@ body {
 
 #nav-list {
     list-style-type: none;
-    margin-top: 30px;
-    margin-right: 150px;
+    margin-top: 50px;
+    margin-right: 130px;
 }
 
 .nav-list li {
@@ -613,13 +613,25 @@ textarea {
 /* Procreate */
 
 #procreate {
+    position: relative;
     background-color: #e3f7ff;
     height: 85vh;
+}
+
+.counter {
+    position: absolute;
+    top: 90px;
+    left: center;
+    display: flex;
+    justify-content: center;
+    color: #292C6D;
+    font-weight: bold;
 }
 
 .slideshow {
     display: flex;
     justify-content: center;
+    height: 620px;
     margin-top: 20px;
 }
 
@@ -627,12 +639,11 @@ textarea {
     display: flex;
     justify-content: center;
     background-color: #fff;
-    width: 850px;
+    width: 880px;
 }
 
 #procreate-img {
     width: auto;
-    height: 620px;
     margin: 0;
 }
 
@@ -851,57 +862,19 @@ textarea {
         margin-bottom: 40px;
     }
 
-    .description {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        display: none
-    }
-
-    #tools {
-        width: 150px;
-    }
-
-    .project h3 {
-        margin-top: 20px;
-    }
-
-    .project p {
-        color: #fff;
-        padding: 0 20px;
-        text-align: center;
-    }
-
-    .project a {
-        font-size: 25px;
-        font-weight: bold;
-        margin-top: 30px;
-        background-color: #009cd4;
-        border-radius: 100px 0 100px 0;
-        padding: 10px 30px;
-        text-shadow: none;
-    }
-
-    .selected {
-        box-shadow: inset 0 0 0 1000px rgba(0,0,0,.7);
-    }
-
-    .selected .description {
-        display: flex;
-    }
-
     /* Procreate */
+    .counter {
+        top: 200px;
+        font-weight: lighter;
+    }
 
     .slideshow {
         margin-top: 0;
+        height: 400px;
     }
 
     #cont {
         width: 560px;
-    }
-
-    #procreate-img {
-        height: 400px;
     }
 
     .slide-btn {
@@ -1188,19 +1161,8 @@ textarea {
     }
 
     #c .project {
-        width: 300px;
+        width: 310px;
         height: 170px;
-    }
-
-    .description {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        display: none
-    }
-
-    #tools {
-        width: 150px;
     }
 
     .project h3 {
@@ -1214,9 +1176,9 @@ textarea {
     }
 
     .project a {
-        font-size: 25px;
+        font-size: 20px;
         font-weight: bold;
-        margin-top: 30px;
+        margin-top: 10px;
         background-color: #009cd4;
         border-radius: 100px 0 100px 0;
         padding: 10px 30px;
@@ -1227,14 +1189,16 @@ textarea {
         box-shadow: inset 0 0 0 1000px rgba(0,0,0,.7);
     }
 
-    .selected .description {
-        display: flex;
-    }
-
     /* Procreate */
 
+    .counter {
+        top: 200px;
+        font-size: 14px;
+        font-weight: lighter;
+    }
+
     .slideshow {
-        margin-top: 0;
+        margin-top: 40px;
         height: 210px;
     }
 
@@ -1247,8 +1211,8 @@ textarea {
     }
 
     .slide-btn {
-        font-size: 18px;
-        width: 20px;
+        font-size: 20px;
+        width: 30px;
     }
 
     #procreate .footer {
